[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/UbuntuTitleFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/ui/ui_btn_bg_1.png" type="Texture" id=2]
[ext_resource path="res://scenes/Menu.gd" type="Script" id=3]
[ext_resource path="res://prefabs/effects/fx_icon_fade.tscn" type="PackedScene" id=7]
[ext_resource path="res://popups/WoodPanelUI.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/Title.png" type="Texture" id=11]
[ext_resource path="res://prefabs/Upgrade.tscn" type="PackedScene" id=12]
[ext_resource path="res://prefabs/Transition.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/sun.png" type="Texture" id=14]
[ext_resource path="res://assets/sfx/ambient.mp3" type="AudioStream" id=15]
[ext_resource path="res://prefabs/PathBattles.tscn" type="PackedScene" id=16]
[ext_resource path="res://assets/font/AbyssinicaSIL-Regular.ttf" type="DynamicFontData" id=17]

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
extra_spacing_top = 1
extra_spacing_bottom = 1
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=4]
size = 20
outline_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
extra_spacing_bottom = -2
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=5]
size = 22
outline_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
extra_spacing_bottom = -2
font_data = ExtResource( 17 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -202, -322 )
script = ExtResource( 3 )

[node name="WoodPanelUi" parent="." instance=ExtResource( 9 )]

[node name="Title" type="TextureRect" parent="."]
modulate = Color( 0.92549, 0.92549, 0.92549, 1 )
anchor_right = 1.0
margin_top = 28.0
margin_bottom = 177.0
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="BG" type="Control" parent="."]
modulate = Color( 0.431373, 0.431373, 0.431373, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 13.0
margin_top = -16.0
margin_right = 13.0
margin_bottom = -16.0

[node name="TextureRect" parent="BG" instance=ExtResource( 7 )]
margin_left = -323.0
margin_top = 32.0
margin_right = -173.0
margin_bottom = 182.0

[node name="TextureRect2" parent="BG" instance=ExtResource( 7 )]
margin_left = 157.0
margin_top = 32.0
margin_right = 307.0
margin_bottom = 182.0

[node name="PathBattles" parent="." instance=ExtResource( 16 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 210.0
margin_top = 123.0
margin_right = 369.0
margin_bottom = 139.0

[node name="VBox" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -70.0
margin_top = -17.0
margin_right = 70.0
margin_bottom = 190.0
custom_constants/vseparation = 6

[node name="btn1" type="Button" parent="VBox"]
margin_right = 140.0
margin_bottom = 65.0
rect_min_size = Vector2( 140, 65 )
focus_mode = 0
custom_colors/font_color = Color( 0.796078, 0.796078, 0.796078, 1 )
custom_fonts/font = SubResource( 2 )
flat = true

[node name="BgButton1" type="TextureRect" parent="VBox/btn1"]
modulate = Color( 0.92549, 0.92549, 0.92549, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="VBox/btn1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.862745, 0.862745, 0.862745, 1 )
custom_constants/line_spacing = -2
custom_fonts/font = SubResource( 3 )
text = "Start"
align = 1
valign = 1
autowrap = true

[node name="btn2" type="Button" parent="VBox"]
margin_top = 71.0
margin_right = 140.0
margin_bottom = 136.0
rect_min_size = Vector2( 140, 65 )
focus_mode = 0
custom_colors/font_color = Color( 0.796078, 0.796078, 0.796078, 1 )
custom_fonts/font = SubResource( 2 )
flat = true

[node name="BgButton1" type="TextureRect" parent="VBox/btn2"]
modulate = Color( 0.92549, 0.92549, 0.92549, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="VBox/btn2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.862745, 0.862745, 0.862745, 1 )
custom_constants/line_spacing = -2
custom_fonts/font = SubResource( 3 )
text = "Options"
align = 1
valign = 1
autowrap = true

[node name="btn3" type="Button" parent="VBox"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_top = 124.0
margin_right = 140.0
margin_bottom = 189.0
rect_min_size = Vector2( 140, 65 )
focus_mode = 0
custom_colors/font_color = Color( 0.796078, 0.796078, 0.796078, 1 )
custom_fonts/font = SubResource( 2 )
flat = true

[node name="BgButton1" type="TextureRect" parent="VBox/btn3"]
modulate = Color( 0.92549, 0.92549, 0.92549, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="VBox/btn3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.862745, 0.862745, 0.862745, 1 )
custom_constants/line_spacing = -2
custom_fonts/font = SubResource( 3 )
text = "pantalla completa"
align = 1
valign = 1
autowrap = true

[node name="btn4" type="Button" parent="VBox"]
margin_top = 142.0
margin_right = 140.0
margin_bottom = 207.0
rect_min_size = Vector2( 140, 65 )
focus_mode = 0
custom_colors/font_color = Color( 0.796078, 0.796078, 0.796078, 1 )
custom_fonts/font = SubResource( 2 )
flat = true

[node name="BgButton1" type="TextureRect" parent="VBox/btn4"]
modulate = Color( 0.92549, 0.92549, 0.92549, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="VBox/btn4"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.862745, 0.862745, 0.862745, 1 )
custom_constants/line_spacing = -2
custom_fonts/font = SubResource( 3 )
text = "Salir"
align = 1
valign = 1
autowrap = true

[node name="Upg" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -339.0
margin_top = -126.0
margin_right = -271.0
margin_bottom = -58.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="upgrades" parent="Upg" instance=ExtResource( 12 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0

[node name="TextureRect" type="TextureRect" parent="Upg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.0
margin_top = 34.0
margin_right = 1.0
margin_bottom = 62.0
texture = ExtResource( 14 )
expand = true

[node name="Label" type="Label" parent="Upg"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -3.0
margin_top = 72.0
margin_right = 35.0
margin_bottom = 91.0
custom_colors/font_color = Color( 0.776471, 0.823529, 0.145098, 1 )
custom_constants/line_spacing = -2
custom_fonts/font = SubResource( 4 )
text = "80"
align = 1
valign = 1
autowrap = true

[node name="LabelMole" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -95.0
margin_top = -46.0
margin_right = -19.0
margin_bottom = -9.0
custom_colors/font_color = Color( 0.643137, 0.643137, 0.643137, 1 )
custom_constants/line_spacing = -2
custom_fonts/font = SubResource( 5 )
text = "v0.020"
align = 2
valign = 1
autowrap = true

[node name="Transition" parent="." instance=ExtResource( 13 )]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -4.0
autoplay = true
